--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -8,11 +8,13 @@
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+
 </head>
 <body>
-  <h1>🧠 Chat with LLaMA</h1>
+  <h1 class="app-title">🛰️ BLACKSITE</h1>
   <div class="container">
-    <div id="response" class="response"></div>
+    <div id="response" class="response"></div> 
     <textarea id="prompt" placeholder="Ask me anything..."></textarea>
     <div class="button-wrapper">
         <button onclick="sendQuery()"><i class="fas fa-paper-plane"></i></button>
